--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
         <title>Bootstrap Grid Project</title>
     </head>
     <body>
-        <h1>Hello world</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col my-col1">
+                    first column
+                </div>
+                <div class="col my-col2">
+                    second column
+                </div>
+                <div class="col my-col3">
+                    third column
+                </div>
+            </div>
+        </div>
   
     
 
