--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     second column
                 </div>
                 <div class="col my-col3">
-                    third column
+                    third 
                 </div>
             </div>
         </div>
