--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
             <div class="row">
                 <div class="col-sm-12 col-md-4 col-lg-2 d-none d-md-block my-col1">
                     <div class="row">
-                            <div class="col m-2">
-                                <button class="btn btn-primary"><img src="img/pencilicon.png" alt=""> 
-                                Compose</button>
-                                
-                            </div>
+                        <div class="col m-2">
+                            <button class="btn btn-primary"><img src="img/pencilicon.png" alt=""> 
+                            Compose</button>
+                        </div>
                             <div class="col">
-                                <button class="btn btn-primary">Compose</button>
-                                
+                                <button class="btn btn-primary"><img src="" alt=""><img src="img/inbox.png" width="30px" 30px; alt=""> Inbox</button>
+                            </div>
+                            <div class="col m-1">
+                                <button class="btn btn-primary"><img src="" alt=""><img src="img/starred.png" width="30px;"  alt=""> Inbox</button>
                             </div>
                     </div>
                 </div>
@@ -48,11 +49,13 @@
                 <div class="col-sm-12 col-md-8  col-lg-5 my-col2">
                    <div class="row">
                         <div class="col first-column">
-                            <p class="d-1 first-email" ><span class="email-sender">Alexander Lucas: </span><span class="email-message">Lorem ipsum dolor sit amet consectetur..</span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 second-email" second-><span class="email-sender">WordPress.com: </span><span class="email-message">Lorem ipsum dolor sit amet consectetur..</span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 third-email"><span class="email-sender">Clockify: </span><span class="email-message">Lorem ipsum dolor sit amet consectetur..</span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 fourth-email"><span class="email-sender">Wix.com: </span><span class="email-message">Lorem ipsum dolor sit amet consectetur..</span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 fifth-email"><span class="email-sender">Bryan Lim: </span><span class="email-message">Lorem ipsum dolor sit amet consectetur..</span><span class="email-time">3:45 PM</span></p>
+                            <p class="d-1 first-email" ><span class="email-sender">Alexander Lucas: </span><span class="email-message">Project graded </span><span class="email-time">3:45 PM</span></p>
+                            <p class="d-1 second-email" second-><span class="email-sender">WordPress.com: </span><span class="email-message">Do more with WordPress </span><span class="email-time">3:45 PM</span></p>
+                            <p class="d-1 third-email"><span class="email-sender">Clockify: </span><span class="email-message">Clockify weekly report </span><span class="email-time">3:45 PM</span></p>
+                            <p class="d-1 fourth-email"><span class="email-sender">Wix.com: </span><span class="email-message">You site is ready to publish </span><span class="email-time">3:45 PM</span></p>
+                            <p class="d-1 fifth-email"><span class="email-sender">Bryan Lim: </span><span class="email-message">Have fun with Kahoot </span><span class="email-time">3:45 PM</span></p>
+                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">3:45 PM</span></p>
+                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">3:45 PM</span></p>
                         </div>
                    </div>
                 </div>
