--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container-fluid justify-content-around">
                 <a class="navbar-brand gmail-text-color" href="#">
                     <img src="img/icons8-gmail-48.png" alt="gmail logo">
-                    Gmail
+                    Ruku Bhattarai
                 </a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" aria-label="Search">
@@ -31,16 +31,28 @@
             <!-- first column with menu list starts here -->
             <div class="row">
                 <div class="col-sm-12 col-md-4 col-lg-2 d-none d-md-block my-col1">
-                    <div class="row">
-                        <div class="col m-2">
-                            <button class="btn btn-primary"><img src="img/pencilicon.png" alt=""> 
+                    <div class="row menu-row">
+                        <div class="col">
+                            <button class="btn btn-primary compose-btn"><img src="img/pencilicon.png" alt=""> 
                             Compose</button>
                         </div>
-                            <div class="col">
-                                <button class="btn btn-primary"><img src="" alt=""><img src="img/inbox.png" width="30px" 30px; alt=""> Inbox</button>
+                            <div class="col m-2">
+                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/inbox.png" width="30px" 30px; alt=""> Inbox(13)</button>
                             </div>
-                            <div class="col m-1">
-                                <button class="btn btn-primary"><img src="" alt=""><img src="img/starred.png" width="30px;"  alt=""> Inbox</button>
+                            <div class="col m-2">
+                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/starred.png" width="30px;"  alt=""> Starred</button>
+                            </div>
+                            <div class="col m-2">
+                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/senticon.png" width="30px;"  alt=""> Sent</button>
+                            </div>
+                            <div class="col m-2">
+                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/draft.png" width="30px;"  alt=""> Drafts</button>
+                            </div>
+                            <div class="col m-2">
+                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/spam.png" width="30px;"  alt=""> Spam</button>
+                            </div>
+                            <div class="col m-2">
+                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/trash.png" width="30px;"  alt=""> Trash</button>
                             </div>
                     </div>
                 </div>
@@ -48,20 +60,44 @@
                 <!-- second column with names of senders,time and message list starts here -->
                 <div class="col-sm-12 col-md-8  col-lg-5 my-col2">
                    <div class="row">
-                        <div class="col first-column">
-                            <p class="d-1 first-email" ><span class="email-sender">Alexander Lucas: </span><span class="email-message">Project graded </span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 second-email" second-><span class="email-sender">WordPress.com: </span><span class="email-message">Do more with WordPress </span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 third-email"><span class="email-sender">Clockify: </span><span class="email-message">Clockify weekly report </span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 fourth-email"><span class="email-sender">Wix.com: </span><span class="email-message">You site is ready to publish </span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 fifth-email"><span class="email-sender">Bryan Lim: </span><span class="email-message">Have fun with Kahoot </span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">3:45 PM</span></p>
-                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">3:45 PM</span></p>
+                        <div class="col msg-list-column">
+                            <p class="first-email" ><span>Alexander Lucas: </span><span class="email-message">Your Project is Graded </span><span class="email-time">5/15/23   2:24 PM</span></p>
+                            <p class="d-1 second-email" second-><span class="email-sender">WordPress.com: </span><span class="email-message">Do more with WordPress </span><span class="email-time">5/14/23  3:45 PM</span></p>
+                            <p class="d-1 third-email"><span class="email-sender">Clockify: </span><span class="email-message">Clockify weekly report </span><span class="email-time">5/13/23  3:45 PM</span></p>
+                            <p class="d-1 fourth-email"><span class="email-sender">Wix.com: </span><span class="email-message">You site is ready to publish </span><span class="email-time">5/12/23  3:45 PM</span></p>
+                            <p class="d-1 fifth-email"><span class="email-sender">Bryan Lim: </span><span class="email-message">Have fun with Kahoot </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
                         </div>
                    </div>
                 </div>
                 <!-- third column with full message and reply box starts here -->
                 <div class="col-sm-12 col-md-12 col-lg-5 d-none d-lg-block my-col3">
-                    third 
+                    <div class="row">
+                        <div class="col opened-email">
+                            <p class="alex">Alexander Lucas</p>
+                            <p>5/15/23 2:24 PM</p>
+                            <p class="alex">Your Project is Graded</p>
+                            <p>Hello Ruku, <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro blanditiis doloremque, officia dolorum nesciunt itaque aliquam laborum animi magnam reiciendis incidunt, nihil et. Cumque adipisci inventore, corporis dignissimos fuga enim! <br>Thanks, <br>Alex</p>
+                            <form action="">
+                                <textarea name="" id="" cols="70" rows="6">reply..</textarea>
+                            </form>
+                            
+                            <button class="btn btn-primary">SEND</button>
+                                <img src="img/aicon.png"  alt="">
+                                <img src="img/attach.png" width="30px" alt="">
+                                <img src="img/link.png" width="30px" alt="">
+                                <img src="img/face.png" width="30px" alt="">
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
