--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
 
-                <!-- second column with names of senders,time and message list starts here -->
+                <!-- second column with names of senders,time and messages list starts here -->
                 <div class="col-sm-12 col-md-8  col-lg-5 my-col2">
                    <div class="row">
                         <div class="col msg-list-column">
@@ -89,15 +89,13 @@
                             <form action="">
                                 <textarea name="" id="" cols="70" rows="6">reply..</textarea>
                             </form>
-                            
                             <button class="btn btn-primary">SEND</button>
-                                <img src="img/aicon.png"  alt="">
-                                <img src="img/attach.png" width="30px" alt="">
-                                <img src="img/link.png" width="30px" alt="">
-                                <img src="img/face.png" width="30px" alt="">
+                            <img src="img/aicon.png"  alt="">
+                            <img src="img/attach.png" width="30px" alt="">
+                            <img src="img/link.png" width="30px" alt="">
+                            <img src="img/face.png" width="30px" alt="">
                         </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
