style added to all the contents

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
                 <div class="col-sm-12 col-md-4 col-lg-2 d-none d-md-block my-col1">
                     <div class="row menu-row">
                         <div class="col">
-                            <button class="btn btn-primary compose-btn"><img src="img/pencilicon.png" alt=""> 
+                            <button class="btn btn-primary compose-btn btn-hover"><img src="img/pencilicon.png" alt=""> 
                             Compose</button>
                         </div>
                             <div class="col m-2">
                                 <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/inbox.png" width="30px" 30px; alt=""> Inbox(13)</button>
                             </div>
                             <div class="col m-2">
-                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/starred.png" width="30px;"  alt=""> Starred</button>
+                                <button class="btn btn-primary menu-list menu-list1"><img src="" alt=""><img src="img/starred.png" width="30px;"  alt=""> Starred</button>
                             </div>
                             <div class="col m-2">
-                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/senticon.png" width="30px;"  alt=""> Sent</button>
+                                <button class="btn btn-primary menu-list menu-list2"><img src="" alt=""><img src="img/senticon.png" width="30px;"  alt=""> Sent</button>
                             </div>
                             <div class="col m-2">
-                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/draft.png" width="30px;"  alt=""> Drafts</button>
+                                <button class="btn btn-primary menu-list menu-list3"><img src="" alt=""><img src="img/draft.png" width="30px;"  alt=""> Drafts</button>
                             </div>
                             <div class="col m-2">
-                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/spam.png" width="30px;"  alt=""> Spam</button>
+                                <button class="btn btn-primary menu-list menu-list4"><img src="" alt=""><img src="img/spam.png" width="30px;"  alt=""> Spam</button>
                             </div>
                             <div class="col m-2">
-                                <button class="btn btn-primary menu-list"><img src="" alt=""><img src="img/trash.png" width="30px;"  alt=""> Trash</button>
+                                <button class="btn btn-primary menu-list menu-list5"><img src="" alt=""><img src="img/trash.png" width="30px;"  alt=""> Trash</button>
                             </div>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                    <div class="row">
                         <div class="col msg-list-column">
                             <p class="first-email" ><span>Alexander Lucas: </span><span class="email-message">Your Project is Graded </span><span class="email-time">5/15/23   2:24 PM</span></p>
-                            <p class="d-1 second-email" second-><span class="email-sender">WordPress.com: </span><span class="email-message">Do more with WordPress </span><span class="email-time">5/14/23  3:45 PM</span></p>
+                            <p class="d-1 second-email"><span class="email-sender">WordPress.com: </span><span class="email-message">Do more with WordPress </span><span class="email-time">5/14/23  3:45 PM</span></p>
                             <p class="d-1 third-email"><span class="email-sender">Clockify: </span><span class="email-message">Clockify weekly report </span><span class="email-time">5/13/23  3:45 PM</span></p>
                             <p class="d-1 fourth-email"><span class="email-sender">Wix.com: </span><span class="email-message">You site is ready to publish </span><span class="email-time">5/12/23  3:45 PM</span></p>
                             <p class="d-1 fifth-email"><span class="email-sender">Bryan Lim: </span><span class="email-message">Have fun with Kahoot </span><span class="email-time">5/11/23  3:45 PM</span></p>
@@ -70,11 +70,8 @@
                             <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
                             <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">5/11/23  3:45 PM</span></p>
                             <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
-                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">5/11/23  3:45 PM</span></p>
                             <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
-                            <p class="d-1 sixth-email"><span class="email-sender">Smud: </span><span class="email-message">View your Bill </span><span class="email-time">5/11/23  3:45 PM</span></p>
-                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
-                            <p class="d-1 seventh-email"><span class="email-sender">Bank: </span><span class="email-message">Your statement is available </span><span class="email-time">5/11/23  3:45 PM</span></p>
+                            
                         </div>
                    </div>
                 </div>
@@ -90,7 +87,7 @@
                                 <textarea name="" id="" cols="70" rows="6">reply..</textarea>
                             </form>
                             <button class="btn btn-primary">SEND</button>
-                            <img src="img/aicon.png"  alt="">
+                            <img src="img/aicon.png" alt="">
                             <img src="img/attach.png" width="30px" alt="">
                             <img src="img/link.png" width="30px" alt="">
                             <img src="img/face.png" width="30px" alt="">
