--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap css link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <!-- link to css style -->
+        <!-- link to external css stylesheet -->
         <link rel="stylesheet" href="./css/style.css">
         <title>Bootstrap Grid Project</title>
     </head>
@@ -15,9 +15,9 @@
         <!-- navbar code starts here -->
         <nav class="navbar bg-dark ">
             <div class="container-fluid justify-content-around">
-                <a class="navbar-brand gmail-text-color" href="#">
+                <a class="navbar-brand gmail-text-color d-flex" href="#">
                     <img src="img/icons8-gmail-48.png" alt="gmail logo">
-                    Ruku Bhattarai
+                    <h2 class="d-none d-md-block">Ruku Bhattarai</h2>
                 </a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" aria-label="Search">
@@ -26,11 +26,11 @@
             </div>
         </nav>
 
-
+        <!-- Three column layout starts here -->
         <div class="container-fluid"> 
             <!-- first column with menu list starts here -->
             <div class="row">
-                <div class="col-sm-12 col-md-4 col-lg-2 d-none d-md-block my-col1">
+                <div class="col-12 col-md-4 col-xl-2 d-none d-md-block my-col1">
                     <div class="row menu-row">
                         <div class="col">
                             <button class="btn btn-primary compose-btn btn-hover"><img src="img/pencilicon.png" alt=""> 
@@ -58,7 +58,7 @@
                 </div>
 
                 <!-- second column with names of senders,time and messages list starts here -->
-                <div class="col-sm-12 col-md-8  col-lg-5 my-col2">
+                <div class="col-12 col-md-8  col-xl-5 my-col2">
                    <div class="row">
                         <div class="col msg-list-column">
                             <p class="first-email" ><span>Alexander Lucas: </span><span class="email-message">Your Project is Graded </span><span class="email-time">5/15/23   2:24 PM</span></p>
@@ -76,7 +76,7 @@
                    </div>
                 </div>
                 <!-- third column with full message and reply box starts here -->
-                <div class="col-sm-12 col-md-12 col-lg-5 d-none d-lg-block my-col3">
+                <div class="col-12 col-md-12 col-xl-5 d-none d-xl-block my-col3">
                     <div class="row">
                         <div class="col opened-email">
                             <p class="alex">Alexander Lucas</p>
@@ -86,7 +86,7 @@
                             <form action="">
                                 <textarea name="" id="" cols="70" rows="6">reply..</textarea>
                             </form>
-                            <button class="btn btn-primary">SEND</button>
+                            <button class="btn btn-primary">REPLY</button>
                             <img src="img/aicon.png" alt="">
                             <img src="img/attach.png" width="30px" alt="">
                             <img src="img/link.png" width="30px" alt="">
